--- a/css/main-style.css
+++ b/css/main-style.css
@@ -354,7 +354,7 @@
   -----------------------------------------*/
    
    #home {
-       background: url('../images/home-bg.jpeg') no-repeat center center;
+       background: url('../images/DevImage.jpg') no-repeat center center;
        background-size: cover;
        vertical-align: middle;
        display: -webkit-box;
