--- a/css/main-style.css
+++ b/css/main-style.css
@@ -670,7 +670,7 @@ section {
   bottom: 10px;
 }
 #fade-quote-carousel.carousel .carousel-indicators > li {
-  background-color: #e84a64;
+  background-color: #FA8072;
   border: none;
 }
 #fade-quote-carousel blockquote {
