--- a/css/main-style.css
+++ b/css/main-style.css
@@ -292,7 +292,7 @@
    .custom-navbar .nav li a {
        font-size: 14px;
        font-weight: 500;
-       color: #000000;
+       color: #FFFFFF;
        letter-spacing: -0.5px;
        padding-right: 22px;
        padding-left: 22px;
@@ -349,6 +349,9 @@
            color: #FFFFFF;
        }
    }
+.drop-list {
+   color: #000000;
+}
    /*---------------------------------------
       HOME              
   -----------------------------------------*/
