--- a/css/main-style.css
+++ b/css/main-style.css
@@ -635,7 +635,7 @@
  /*---------------------------------------
       TESTIMONIAL            
   -----------------------------------------*/
-section {
+.section {
     padding-top: 100px;
     padding-bottom: 100px;
 }
