--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,4 +1,5 @@
    @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600');
+   @import url('https://fonts.googleapis.com/css?family=Unica+One');
    body {
        background: #FFFFFF;
        font-family: 'Poppins', sans-serif;
@@ -121,9 +122,9 @@
    .section-btn:focus {
        background: #00F260;
        /* fallback for old browsers */
-       background: -webkit-linear-gradient(to right, #1dc8cd, #00F260);
+       background: -webkit-linear-gradient(to right, #00F260, #1dc8cd);
        /* Chrome 10-25, Safari 5.1-6 */
-       background: linear-gradient(to right, #1dc8cd, #00F260);
+       background: linear-gradient(to right, #00F260, #1dc8cd);
        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
        border-color: transparent;
        color: #393939;
@@ -132,9 +133,9 @@
    .overlay {
        background: #00F260;
        /* fallback for old browsers */
-       background: -webkit-linear-gradient(to right, #1dc8cd, #00F260);
+       background: -webkit-linear-gradient(to right, #00F260, #1dc8cd);
        /* Chrome 10-25, Safari 5.1-6 */
-       background: linear-gradient(to right, #1dc8cd, #00F260);
+       background: linear-gradient(to right, #00F260, #1dc8cd);
        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
        opacity: 0.7;
        position: absolute;
@@ -185,7 +186,7 @@
        margin-top: -10px;
        margin-left: -10px;
        border-radius: 50%;
-       border: 2px solid #1dc8cd;
+       border: 3px solid #1dc8cd;
        border-top-color: #FFFFFF;
        animation: spinner .9s linear infinite;
    }
@@ -254,9 +255,9 @@
    .custom-navbar .navbar-brand:hover {
     background: #00F260;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #1dc8cd, #00F260);
+    background: -webkit-linear-gradient(to right, #00F260, #1dc8cd);
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #1dc8cd, #00F260);
+    background: linear-gradient(to right, #00F260, #1dc8cd);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    }
    
@@ -281,9 +282,9 @@
    .custom-navbar .section-btn:hover {
     background: #00F260;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #1dc8cd, #00F260);
+    background: -webkit-linear-gradient(to right, #00F260, #1dc8cd);
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #1dc8cd, #00F260);
+    background: linear-gradient(to right, #00F260, #1dc8cd);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    }
    
@@ -380,6 +381,8 @@
    
    #home h1 {
        color: #FFFFFF;
+       font-family: 'Unica One', cursive;
+       text-transform: uppercase;
    }
    
    .home-info .section-btn {
@@ -601,9 +604,9 @@
    .blog-info .section-btn:hover {
        background: #00F260;
        /* fallback for old browsers */
-       background: -webkit-linear-gradient(to right, #1dc8cd, #00F260);
+       background: -webkit-linear-gradient(to right, #00F260, #1dc8cd);
        /* Chrome 10-25, Safari 5.1-6 */
-       background: linear-gradient(to right, #1dc8cd, #00F260);
+       background: linear-gradient(to right, #00F260, #1dc8cd);
        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
        color: #FFFFFF;
    }
@@ -633,9 +636,9 @@
     color: #000000;
     background: #00F260;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #1dc8cd, #00F260);
+    background: -webkit-linear-gradient(to right, #00F260, #1dc8cd);
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #1dc8cd, #00F260);
+    background: linear-gradient(to right, #00F260, #1dc8cd);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
 }
 
@@ -696,9 +699,9 @@
    #contact {
        background: #00F260;
        /* fallback for old browsers */
-       background: -webkit-linear-gradient(to right, #1dc8cd, #00F260);
+       background: -webkit-linear-gradient(to right, #00F260, #1dc8cd);
        /* Chrome 10-25, Safari 5.1-6 */
-       background: linear-gradient(to right, #1dc8cd, #00F260);
+       background: linear-gradient(to right, #00F260, #1dc8cd);
        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    }
    
@@ -1040,4 +1043,7 @@ footer {
       bottom: 6em;
     }
     
+  }
+  .twitter-feed{
+      padding-bottom: 20px;
   }
