--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1013,9 +1013,7 @@ footer p, footer span, .footer-link li a {
     }
 }
 
-.twitter-feed {
-    
-}
+.twitter-feed {}
 
 .ml1 {
     font-weight: 900;
@@ -1051,4 +1049,10 @@ footer p, footer span, .footer-link li a {
 
 .ml1 .line2 {
     bottom: 0;
+}
+
+img.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
