--- a/css/app.css
+++ b/css/app.css
@@ -6,6 +6,21 @@ body {
     overflow-x: hidden;
 }
 
+body::-webkit-scrollbar {
+    width: 1.0em;
+}
+
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #ddd;
+    outline: 1px solid #11cdef;
+    border-radius: 20px;
+}
+
 /*---------------------------------------
   TYPOGRAPHY
 -----------------------------------------*/
