--- a/css/app.css
+++ b/css/app.css
@@ -19,7 +19,7 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: #ddd;
+    background-color: #c0c0c0;
     outline: 1px solid #11cdef;
     border-radius: 10px;
 }
@@ -162,7 +162,7 @@ a:focus {
     /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #2dce89, #11cdef);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    opacity: 0.6;
+    opacity: 0.7;
     position: absolute;
     width: 100%;
     height: 100%;
